index page overlapping fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -85,42 +85,37 @@ body {
 }
 
 .customHero {
-  /* ff 3.6+ */
-  background: -moz-radial-gradient(
+  padding: 80px;
+  /* background: -moz-radial-gradient(
     circle at 60% 12%,
     rgba(0, 40, 83, 1) 0%,
     rgba(4, 12, 24, 1) 100%
   );
 
   padding: 80px;
-
-  /* safari 5.1+,chrome 10+ */
   background: -webkit-radial-gradient(
     circle at 60% 12%,
     rgba(0, 40, 83, 1) 0%,
     rgba(4, 12, 24, 1) 100%
   );
 
-  /* opera 11.10+ */
   background: -o-radial-gradient(
     circle at 60% 12%,
     rgba(0, 40, 83, 1) 0%,
     rgba(4, 12, 24, 1) 100%
   );
 
-  /* ie 10+ */
   background: -ms-radial-gradient(
     circle at 60% 12%,
     rgba(0, 40, 83, 1) 0%,
     rgba(4, 12, 24, 1) 100%
   );
 
-  /* global 92%+ browsers support */
   background: radial-gradient(
     circle at 60% 12%,
     rgba(0, 40, 83, 1) 0%,
     rgba(4, 12, 24, 1) 100%
-  );
+  ); */
 }
 
 .cartoon {
